REMS-Salesforce/force-app/main/default/objects/Prescriber__c/Prescriber__c.object-meta.xml
<CustomObject>
    <label>Prescriber</label>
    <nameField>
        <label>Prescriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prescribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>