REMS-Salesforce/force-app/main/default/objects/Prescriber__c/fields/Certifiacation_Date__c.field-meta.xml
<CustomField>
    <fullName>Certifiacation_Date__c</fullName>
    <label>Certifiacation Date</label>
    <type>Date</type>
</CustomField>