REMS-Salesforce/force-app/main/default/objects/Prescriber__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Status</label>
    <type>Checkbox</type>
</CustomField>