REMS-Salesforce/force-app/main/default/objects/Prescriber__c/fields/License_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>License_expiry_date__c</fullName>
    <label>License expiry date</label>
    <type>Date</type>
</CustomField>