REMS-Salesforce/force-app/main/default/objects/Prescriber__c/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <description>National Provider Identifier</description>
    <label>NPI Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>