REMS-Salesforce/force-app/main/default/objects/Prescriber__c/fields/Prescriber_Status__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft,</fullName>
            </value>
            <value>
                <fullName>Certified,</fullName>
            </value>
            <value>
                <fullName>Expired,</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>